--- a/static/css/nav.css
+++ b/static/css/nav.css
@@ -104,11 +104,12 @@ nav {
 }
 @media (max-width: 767.98px) {
   nav {
-    width: 90%;
-    padding: 1rem;
-    margin: 0 auto;
+    width: 100%;
+    padding: 1rem 5%;
+    margin: 0;
     display: flex;
     justify-content: space-between;
+    box-sizing: border-box;
 
     ul {
       li {
